--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -2,7 +2,7 @@
   specialty: Body Building Trainer
   image: trainer-1.jpg
 
-- name: LEA YOUNG
+- name: KAT MUELLER
   specialty: Body Building Trainer
   image: trainer-2.jpg
 
