--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,8 @@ future: true
 
 # Social
 socialimg: /img/social.jpg # be sure to change this image
-facebook: fbusername
+facebook: ResultsNowLLC
 twitter: twusername
-github: ghusername
-googleplus: gusername
 instagram: igusername
 
 # Contact
