--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -1,5 +1,5 @@
-- name: DIEGO CARTER
-  specialty: Body Building Trainer
+- name: KYLE FELTNER
+  specialty: Personal Trainer/Group Fitness Instructor
   image: trainer-1.jpg
 
 - name: KAT MUELLER
