linked photo of Kyle

--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -1,6 +1,6 @@
 - name: KYLE FELTNER
   specialty: Personal Trainer/Group Fitness Instructor
-  image: trainer-1.jpg
+  image: 269409_915360389921_2042785016_n.jpg
 
 - name: KAT MUELLER
   specialty: Body Building Trainer
