added jenny's pic

--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -24,7 +24,7 @@
   
 - name: Jenny Zurad
   specialty: Certified Yoga Instructor
-  image: trainer-3.jpg
+  image: jenny profile.jpg
   
 - name: Stephanie Grant
   specialty: Certified Yoga Instructor
