added katie and lisa profile pics

--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -8,7 +8,7 @@
   
 - name: Katie Thomas
   specialty: Certified Personal Trainer/Certified Group Fitness Instructor
-  image: trainer-4.jpg
+  image: katie.png
 
 - name: Ethan Goodrich
   specialty: Certified Personal Trainer
@@ -20,7 +20,7 @@
 
 - name: Lisa Baker
   specialty: Certified Yoga Instructor
-  image: trainer-3.jpg
+  image: lisa.png
   
 - name: Jenny Zurad
   specialty: Certified Yoga Instructor
