--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -8,7 +8,7 @@
   
 - name: Katie Thomas
   specialty: Certified Personal Trainer/Certified Group Fitness Instructor
-  image: katie.png
+  image: Katie profile.jpg
 
 - name: Ethan Goodrich
   specialty: Certified Personal Trainer
@@ -20,7 +20,7 @@
 
 - name: Lisa Baker
   specialty: Certified Yoga Instructor
-  image: lisa.png
+  image: Lisa profile.jpg
   
 - name: Jenny Zurad
   specialty: Certified Yoga Instructor
