--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: ""
 future: true
 
 # Social
-socialimg: /img/social.jpg # be sure to change this image
+socialimg: /images/social.jpg # be sure to change this image
 facebook: ResultsNowLLC
 twitter: twusername
 instagram: igusername
