--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Results Now
-tagline: "Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"
+tagline: "We are a Fit Family that enjoys helping others. We motivate each other and encourage each other. Our instructors and trainers are certified and can modify all exercises to any fitness level. We enjoy training and helping people achieve their fitness goals. We are here for you!!! Let us help you get to your goal!!"
 url: "https://resultsnowfitness.net" # The base hostname & protocol for your site. Use it if you need absolute URL's
 description: ""
 future: true
