--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,4 +1,4 @@
-- name: Sophia Foster Loose 20LBS in just 2 months
+- name: Kai Mueller
   quote: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
   image: person1.jpg
 
