add twitter and instagram

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ future: true
 # Social
 socialimg: /images/social.jpg # be sure to change this image
 facebook: ResultsNowLLC
-twitter: twusername
-instagram: igusername
+twitter: resultsnowllc
+instagram: resultsnowllc
 
 # Contact
 phone: "1-859-334-0249"
