--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -1,6 +1,6 @@
 - name: Kat Mueller
   specialty: Owner/Certified Personal Trainer/Certified Group Fitness Instructor
-  image: kar profile.png
+  image: Kat profile.png
   
 - name: Alisa Hampton
   specialty: Certified Personal Trainer/Certified Group Fitness Instructor/Certified Yoga Instructor
@@ -24,7 +24,7 @@
   
 - name: Melissa Chapman
   specialty: Certified Group Fitness Instructor
-  image: 
+  image: Melissa profle.png
   
 - name: Lisa Baker
   specialty: Certified Yoga Instructor
