--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -1,6 +1,6 @@
 - name: Kat Mueller
   specialty: Owner/Certified Personal Trainer/Certified Group Fitness Instructor
-  image: 
+  image: IMG_6210.jpeg
   
 - name: Alisa Hampton
   specialty: Certified Personal Trainer/Certified Group Fitness Instructor/Certified Yoga Instructor
