add daryl's big head

--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -8,7 +8,7 @@
   
 - name: Daryl Perry
   specialty: Certified Personal Trainer/Certified Nutritionist
-  image: Daryl profile.png
+  image: daryl.JPG
 
 - name: Jimmy Mounce
   specialty: Certified Personal Trainer
