--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -16,11 +16,11 @@
 
 - name: Ethan Goodrich
   specialty: Certified Personal Trainer
-  image: ethan.png
+  image: IMG_5657.PNG
 
 - name: Linda Holderness
   specialty: Certified Group Fitness Instructor
-  image: LInda profile.png
+  image: IMG_5658.PNG
   
 - name: Melissa Chapman
   specialty: Certified Group Fitness Instructor
