--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -24,7 +24,7 @@
   
 - name: Melissa Chapman
   specialty: Certified Group Fitness Instructor
-  image: Melissa profle.png
+  image: IMG_6265.JPG
   
 - name: Lisa Baker
   specialty: Certified Yoga Instructor
