--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -16,7 +16,7 @@
 
 - name: Ethan Goodrich
   specialty: Certified Personal Trainer
-  image: IMG_5657.PNG
+  image: IMG_5657.JPG
 
 - name: Linda Holderness
   specialty: Certified Group Fitness Instructor
