--- a/_data/trainers.yml
+++ b/_data/trainers.yml
@@ -4,7 +4,7 @@
   
 - name: Alisa Hampton
   specialty: Certified Personal Trainer/Certified Group Fitness Instructor/Certified Yoga Instructor
-  image: Alisa profile.png
+  image: IMG_6202.JPG
   
 - name: Daryl Perry
   specialty: Certified Personal Trainer/Certified Nutritionist
