--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,11 +1,11 @@
-- name: Kai Mueller
-  quote: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-  image: person1.jpg
+- name: Rebecca Klingenberg
+  quote:
+  image: IMG_5664JPG
 
-- name: John Collins
-  quote: Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-  image: person2.jpg
+- name: Alexa Newton
+  quote:
+  image: IMG_5663JPG
 
-- name: Adam Ross
-  quote: Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-  image: person3.jpg
+- name: Linda Ligas
+  quote:
+  image: IMG_5666JPG
