--- a/_data/intros.yml
+++ b/_data/intros.yml
@@ -1,11 +1,11 @@
-- focus: Body Building
+- focus: Core Stability & Balance
   description: Which roasted parts of sentences fly into your mouth.
   image: intro-img-1.jpg
   
-- focus: Yoga Program
+- focus: Strength Training 
   description: Which roasted parts of sentences fly into your mouth.
   image: intro-img-2.jpg
   
-- focus: Aerobics Classes
+- focus: Weight Loss
   description: Which roasted parts of sentences fly into your mouth.
   image: intro-img-3.jpg
