--- a/_data/intros.yml
+++ b/_data/intros.yml
@@ -1,11 +1,11 @@
 - focus: Core Stability & Balance
-  description: 
+  description: The basis of all exercising and every day funtioning starts with strengthening the core.
   image: intro-img-3.jpg
   
 - focus: Strength Training 
-  description: 
+  description: Using resistance to build muscle for definition or bulk is important for all ages and fitness levels.
   image: intro-img-1.jpg
   
 - focus: Weight Loss
-  description: 
+  description: Healthy lifestyles of good nutrition and exercising will help the body become more fit.
   image: intro-img-2.jpg
