--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,15 +1,15 @@
 - title: Strength 
-  description: Separated they live in Bookmarksgrove right at the coast of the Semantics
+  description: Single and compound muscular movements to create definition and musclular endurance.
   icon: weightlifting
 
 - title: Cardio
-  description: Separated they live in Bookmarksgrove right at the coast of the Semantics
+  description: Enhance cardiovascular endurance and burn calories.
   icon: gym
 
 - title: Mix of Strength & Cardio 
-  description: Separated they live in Bookmarksgrove right at the coast of the Semantics
+  description: Cardio and strength training together to help with cardiovascular and muscle endurance.
   icon: exercise-2
 
 - title: Yoga
-  description: Separated they live in Bookmarksgrove right at the coast of the Semantics
+  description: Focus on the breath through a dynamic flow of strength and flexibility poses and then clear the mind with meditation.
   icon: meditation
