--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,11 +1,11 @@
 - name: Rebecca Klingenberg
   quote:
-  image: IMG_5664JPG
+  image: IMG_5664.JPG
 
 - name: Alexa Newton
   quote:
-  image: IMG_5663JPG
+  image: IMG_5663.JPG
 
 - name: Linda Ligas
   quote:
-  image: IMG_5666JPG
+  image: IMG_5666.JPG
