--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -8,8 +8,8 @@
   icon: meditation
   image: classes-5.jpg
   
-- title: Advanced Weightlifting for Lean Muscle Gain
-  description: Multiple muscle group lifting to gain hypertropy and muscle endurance for a lean muscle gain.
+- title: Advanced Weightlifting for Lean Muscle
+  description: Multiple muscle group lifting to gain hypertrophy and muscle endurance for a lean muscle gain.
   icon: gym
   image: classes-7.jpg
   
