--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -39,7 +39,7 @@
   image: classes-8.jpg
   
 - title: Vinyasa Flow
-  description: Yoga focusing on breathing through a slow dynamic flow from one posture to another.
+  description: Yoga focusing on breathing through a slow dynamic flow from one pose to another.
   icon: meditation
   image: classes-5.jpg
 
