--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -14,7 +14,7 @@
   image: classes-7.jpg
   
 - title: Barre
-  description: A core class focusing on the body to improve strength, posture, flexibility, balance, stability, and muscle endurance.
+  description: A core class focusing on the lower body to improve strength, posture, flexibility, balance, stability, and muscle endurance.
   icon: gym
   image: classes-7.jpg
   
