--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -21,7 +21,7 @@
 - title: Advanced Bootcamp
   description: Strength, plyometric, cardiovascular, and functional training designed to improve strength and fitness.
   icon: exercise-2
-  image: plyometric exercises.jpg
+  image: plyometric-exercises.jpg
   
 - title: Cardio Core
   description: A workout incorporating cardiovascular exercises with core exercises, mainly focusing on the abdominals, obliques, shoulders, and glutes.
