--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -11,7 +11,7 @@
 - title: Advanced Weightlifting for Lean Muscle
   description: Multiple muscle group lifting to gain hypertrophy and muscle endurance for a lean muscle gain.
   icon: gym
-  image: classes-7.jpg
+  image: advancedlifting.jpg
   
 - title: Barre
   description: A core class focusing on the lower body to improve strength, posture, flexibility, balance, stability, and muscle endurance.
