--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -16,7 +16,7 @@
 - title: Barre
   description: A core class focusing on the lower body to improve strength, posture, flexibility, balance, stability, and muscle endurance.
   icon: gym
-  image: classes-7.jpg
+  image: barre.jpg
   
 - title: Advanced Bootcamp
   description: Strength, plyometric, cardiovascular, and functional training designed to improve strength and fitness.
